force-app/main/default/objects/PublicGroup__mdt/PublicGroup__mdt.object-meta.xml
<CustomObject>
    <description>Utilizado no de/para na criação e alteração dos usuários para inserção nos grupos públicos correspondentes</description>
    <label>Grupo Público</label>
    <pluralLabel>Grupos Públicos</pluralLabel>
</CustomObject>