force-app/main/default/objects/PublicGroup__mdt/fields/PartnerGroup__c.field-meta.xml
<CustomField>
    <fullName>PartnerGroup__c</fullName>
    <label>Grupo do Aliado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TelevendasAliados</fullName>
                <default>true</default>
                <label>Televendas</label>
            </value>
            <value>
                <fullName>PAPAliados</fullName>
                <label>PAP</label>
            </value>
            <value>
                <fullName>RetencaoTotalizadaFixaAliados</fullName>
                <label>Retenção Totalizada Fixa</label>
            </value>
            <value>
                <fullName>RetencaoFixaAltasMovelAliados</fullName>
                <label>Retenção Fixa Altas Móvel</label>
            </value>
            <value>
                <fullName>RetencaoFixaOCAliados</fullName>
                <label>Retenção Fixa OC</label>
            </value>
            <value>
                <fullName>RetencaoFixaAliados</fullName>
                <label>Retenção Fixa</label>
            </value>
            <value>
                <fullName>RetencaoTotalizadaMovelAliados</fullName>
                <label>Retenção Totalizada Móvel</label>
            </value>
            <value>
                <fullName>RetencaoMovelAltasFixaAliados</fullName>
                <label>Retenção Móvel Altas Fixa</label>
            </value>
            <value>
                <fullName>RetencaoMovelOCAliados</fullName>
                <label>Retenção Móvel OC</label>
            </value>
            <value>
                <fullName>RetencaoMovelAliados</fullName>
                <label>Retenção Móvel</label>
            </value>
            <value>
                <fullName>RevendaAliados</fullName>
                <label>Revenda</label>
            </value>
            <value>
                <fullName>SilverRetencaoTotalizada</fullName>
                <label>Silver Retenção Totalizada</label>
            </value>
            <value>
                <fullName>SilverRetencaoFixa</fullName>
                <label>Silver Retenção Fixa</label>
            </value>
            <value>
                <fullName>SilverRetencaoFixaOutraChance</fullName>
                <label>Silver Retenção Fixa Outra Chance</label>
            </value>
            <value>
                <fullName>SilverRetencaoFixaWinback</fullName>
                <label>Silver Retenção Fixa Winback</label>
            </value>
            <value>
                <fullName>SilverRetencaoMovel</fullName>
                <label>Silver Retenção Móvel</label>
            </value>
            <value>
                <fullName>SilverRetencaoMovelOutraChance</fullName>
                <label>Silver Retenção Móvel Outra Chance</label>
            </value>
            <value>
                <fullName>SilverRetencaoMovelWinback</fullName>
                <label>Silver Retenção Móvel Winback</label>
            </value>
            <value>
                <fullName>SilverFixa</fullName>
                <label>Silver Fixa</label>
            </value>
            <value>
                <fullName>SilverFixaCrosseling</fullName>
                <label>Silver Fixa Crosseling</label>
            </value>
            <value>
                <fullName>SilverMovel</fullName>
                <label>Silver Móvel</label>
            </value>
            <value>
                <fullName>SilverMovelCrosseling</fullName>
                <label>Silver Móvel Crosseling</label>
            </value>
            <value>
                <fullName>SAVAliados</fullName>
                <label>SAV</label>
            </value>
            <value>
                <fullName>PurpuraRetencaoFixa</fullName>
                <label>Púrpura Retenção Fixa</label>
            </value>
            <value>
                <fullName>PurpuraRetencaoMovel</fullName>
                <label>Púrpura Retenção Móvel</label>
            </value>
            <value>
                <fullName>PurpuraFixa</fullName>
                <label>Púrpura Fixa</label>
            </value>
            <value>
                <fullName>PurpuraFixaCrosseling</fullName>
                <label>Púrpura Fixa Crosseling</label>
            </value>
            <value>
                <fullName>PurpuraMovel</fullName>
                <label>Púrpura Móvel</label>
            </value>
            <value>
                <fullName>PurpuraMovelCrosseling</fullName>
                <label>Púrpura Móvel Crosseling</label>
            </value>
            <value>
                <fullName>OuvidoriaAliados</fullName>
                <label>Ouvidoria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>