force-app/main/default/objects/PublicGroup__mdt/fields/PermissionSet__c.field-meta.xml
<CustomField>
    <fullName>PermissionSet__c</fullName>
    <description>API Name do Permission Set utilizado para realizar a ponte com o grupo em que o usuário deve ser inserido</description>
    <label>Permission Set</label>
    <length>50</length>
    <type>Text</type>
</CustomField>