force-app/main/default/objects/PublicGroup__mdt/fields/PublicGroup__c.field-meta.xml
<CustomField>
    <fullName>PublicGroup__c</fullName>
    <label>Grupo Público</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OfferLevel1Group</fullName>
                <default>true</default>
                <label>Acesso Ofertas de Nível 1 Fixa</label>
            </value>
            <value>
                <fullName>OfferLevel2Group</fullName>
                <label>Acesso Ofertas de Nível 2 Fixa</label>
            </value>
            <value>
                <fullName>OfferMobileLevel1Group</fullName>
                <label>Acesso Ofertas de Nível 1 Móvel</label>
            </value>
            <value>
                <fullName>OfferMobileLevel2Group</fullName>
                <label>Acesso Ofertas de Nível 2 Móvel</label>
            </value>
            <value>
                <fullName>OfferNewMobileGroup</fullName>
                <label>Acesso Ofertas de Alta Móvel</label>
            </value>
            <value>
                <fullName>BookOffersAccess</fullName>
                <label>Acesso a Ofertas de Book</label>
            </value>
            <value>
                <fullName>OfferAcquisitionHomeGroup</fullName>
                <label>Acesso Ofertas de Aquisição com Home</label>
            </value>
            <value>
                <fullName>OfferAcquisitionGroup</fullName>
                <label>Acesso Ofertas de Aquisição sem Home</label>
            </value>
            <value>
                <fullName>OfferBaseHomeGroup</fullName>
                <label>Acesso Ofertas de Base com Home</label>
            </value>
            <value>
                <fullName>OfferBaseGroup</fullName>
                <label>Acesso Ofertas de Base sem Home</label>
            </value>
            <value>
                <fullName>MobileLevel1RetentionGroup</fullName>
                <label>Retenção N1 Móvel</label>
            </value>
            <value>
                <fullName>AliadoHistoricoContatoEndereco</fullName>
                <label>Aliado-Histórico do Contato e Endereço</label>
            </value>
            <value>
                <fullName>AliadoHistoricoDadosPessoais</fullName>
                <label>Aliado-Histórico de Dados Pessoais</label>
            </value>
            <value>
                <fullName>HDEAccessDashReport</fullName>
                <label>Acesso Paineis e Relatórios - HDE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>