force-app/main/default/objects/PublicGroup__mdt/fields/SimplifiedPublicGroups__c.field-meta.xml
<CustomField>
    <fullName>SimplifiedPublicGroups__c</fullName>
    <label>Grupos Públicos Simplificado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nivel_1</fullName>
                <default>true</default>
                <label>Nível 1</label>
            </value>
            <value>
                <fullName>Nivel_2</fullName>
                <label>Nível 2</label>
            </value>
            <value>
                <fullName>Alta Móvel</fullName>
            </value>
            <value>
                <fullName>Aquisição Home Assist</fullName>
            </value>
            <value>
                <fullName>Aquisição</fullName>
            </value>
            <value>
                <fullName>Base Home Assist</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>