force-app/main/default/objects/PublicGroup__mdt/listViews/ALLFIELDS.listView-meta.xml
<ListView>
    <fullName>ALLFIELDS</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>PartnerGroup__c</columns>
    <columns>PublicGroup__c</columns>
    <columns>IsProtected</columns>
    <columns>SimplifiedPublicGroups__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL FIELDS</label>
    <language>en_US</language>
</ListView>